--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clsx": "^2.1.1",
     "lucide": "^0.394.0",
     "lucide-react": "^0.394.0",
-    "next": "14.2.3",
+    "next": "^14.2.30",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
